crates/compiler/parse/tests/snapshots/pass/malformed_pattern_module_name.expr.formatted.roc
when x is
    Foo.and -> 1
    _ -> 4