crates/compiler/parse/tests/snapshots/fail/when_missing_arrow.expr.roc
when 5 is
    1 -> 2
    _
